upgrade package version
